# multi-point-pendulum

./: CMakeLists.txt
lib/: CMakeLists.txt
src/: main.cpp
